Added some more

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -25,6 +25,17 @@ Year = {2001} }
 }
 
 @online{
+	Batik,
+  	author = {open source},
+  	title = {Batik SVG Toolkit},
+  	year = {2015},
+  	url = {https://xmlgraphics.apache.org/batik/},
+  	urldate = {2015-05-11}
+}
+
+
+
+@online{
 JavaFX_8,
   author = {Oracle},
   title = {JavaFX: Getting Started with JavaFX},
