changed one line

--- a/Project/Report/utkast till utkast till rapport.tex
+++ b/Project/Report/utkast till utkast till rapport.tex
@@ -55,7 +55,7 @@ To make up for the shift in focus in the eyes a plus glass has to be put in fron
 
 There are also several different variations on these charts. Different sets of symbols, ranging from different subsets of latin letters to more abstract symbols, have been developed for different types of patients, such as those who are analphabetic, or for small children. The layout of these charts also have variations, from the classic Snellen Chart that was developed in the 19th century, to the more modern LogMAR chart.
 
-\subsection{Related work}
+\section{Related work}
 Several pieces of software exists that tries to solve the problems of displaying information from an android tablet or phone on a larger screen. 
 
 \subsubsection{Chromecast and Apple TV}
