--- a/Project/Report/utkast till utkast till rapport.tex
+++ b/Project/Report/utkast till utkast till rapport.tex
@@ -152,6 +152,8 @@ Finally we should design a way for the database of symbols and chart layouts to 
 \section{Ethical considerations} %vilka etiska frågeställningar finns (tänk t.ex. på användningen av resultatet)?
 Our ethical obligations with this project is providing a functional and stable product. If our system does not perform to specification, a lot of patients could get erroneous measurements during testing, costing a lot of time and money to correct. This is very important to think about since we are dealing with treatment of people.
 
+\chapter{Problem Description}
+
 \chapter{Theory}
 
 %%%%%%%%%%%%%%%%%%%%%%%%DEL 2: GENOMFÖRANDE
@@ -277,6 +279,7 @@ The easiest way to see if our product satisfies these demands is putting it into
 
 \chapter{Results}
 
+\chapter{Conclusion}
 
 
 
