Added a few references to .bib file

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -1,13 +1,4 @@
-@article{
-Exempel1,
-Author = {Nilsson, S. and Ohlsson, A. and Johansson, C},
-Title = {Exempel på en referens},
-Journal = {Kalle Anka},
-Volume = {50},
-Pages = {9-19},
-Year = {2001} }
-
-@book{
+@book{Swing_Book,
   Author = {Loy, M., Eckstein, R., Wood, D., Elliot, J., Cole, B.},
   Title = {Java Swing},
   Edition = {2nd Edition},
@@ -15,8 +6,7 @@ Year = {2001} }
   Year = {2003}
 }
 
-@online{
-	AndroidSVG,
+@online{AndroidSVG,
   	author = {paul.leb...@gmail.com},
   	title = {AndroidSVG},
   	year = {2015},
@@ -24,8 +14,7 @@ Year = {2001} }
   	urldate = {2015-05-11}
 }
 
-@online{
-	Batik,
+@online{Batik,
   	author = {open source},
   	title = {Batik SVG Toolkit},
   	year = {2015},
@@ -33,10 +22,7 @@ Year = {2001} }
   	urldate = {2015-05-11}
 }
 
-
-
-@online{
-JavaFX_8,
+@online{JavaFX_8,
   author = {Oracle},
   title = {JavaFX: Getting Started with JavaFX},
   year = {2014},
@@ -83,11 +69,20 @@ JavaFX_8,
   urldate = {2015-04-27}
 }
 
-@online{
-  Kryonet,
+@online{Kryonet,
   title = {Kryonet},
   url = {https://www.openhub.net/p/kryonet},
   urldate = {2015-04-27}
 }
 
+@article{Colenbrander,
+  author = {Colenbrander, A.},
+  title = {Measuring Vision and Vision Loss},
+  year = 2001
+}
 
+@article{PGSoderberg,
+  author = {Söderberg, PG.},
+  title = {Impact of magnification when measuring VA at shorter
+distance than 6 m}
+}
